# custominfer

./: CMakeLists.txt  Makefile  aligner.cpp  custominfer_lib.cpp  custominfer_lib.h  gstcustominfer.cpp  gstcustominfer.h  gstdsexample.cpp  gstdsexample.h  gstdsexample_optimized.cpp  gstdsexample_optimized.h
custominfer_lib/: Makefile  custominfer_lib.c  custominfer_lib.h
